--- a/about.html
+++ b/about.html
@@ -23,10 +23,35 @@
             <div class="about-content">
                 <img src="images/headshot.jpeg" alt="Aneesh Roy" class="profile-image">
                 <p class="editable-paragraph">
-                    My name is Aneesh Roy, but all of my friends call me Chiko. I graduated from the University of Texas at Austin with a degree in Computational Engineering and a minor in Entrepreneurship. As a gen-Z future professional, I have had the privilege to begin programming in middle school, where I have focused on algorithmic data processing and machine learning. I am an aspiring Big Data professional where I can put my predictive skills to the test! I strive to be a leader in all of my workplace situations, where I can flex my problem-solving, public speaking, and project management skills.
+                    My name is Aneesh Roy, but all of my friends call me Chiko. I recently graduated from UT Austin with a degree in Computational Engineering and a minor in Entrepreneurship.
+                     As a gen-Z future professional, I have had the privilege to begin programming in middle school, where I have focused on algorithmic data processing and machine learning.
+                     I am an aspiring Big Data professional so I can put my predictive skills to the test!
+                     I strive to be a leader in all of my workplace situations, where I can flex my problem-solving, public speaking, and project management skills.
+                    In my free time, I play a good amount of basketball and ultimate frisbee and love to talk about all things NBA.
+                     Also, any conversation about your favorite movies or directors might get dragged on.
+                      I am a musician and love to produce and play the drums, where I released an alt-rock album in high school.
                 </p>
-                    <p>In my free time, I play a good amount of basketball and ultimate frisbee and love to talk about all things NBA. Also, any conversation about your favorite movies or directors might get dragged on. I am a musician and love to produce and play the drums, where I released an alt-rock album in high school.
-                 </p>
+                <h2>Education</h2>
+                <p class="editable-paragraph">
+                    <strong>The University of Texas at Austin</strong><br>
+                    Bachelor of Science, Computational Engineering<br>
+                    Minor: Entrepreneurship<br>
+                    Graduation: May 2024<br>
+                    GPA: 3.1<br>
+                    Relevant Coursework: Software Eng. & Design, Adv. Scientific Eng., Scientific Computation, Data Visualization
+                </p>
+                <h2>Skills</h2>
+                <p class="editable-paragraph">
+                    <strong>Computer Skills:</strong> Python, Java, C++, R, MATLAB, HTML, CSS, Flask, Springboot, Microsoft Office Suite
+                </p>
+                <h2>Languages</h2>
+                <p class="editable-paragraph">
+                    Fluent in English, Intermediate in Spanish and Bangla
+                </p>
+                <h2>Work Eligibility</h2>
+                <p class="editable-paragraph">
+                    Eligible to work in the US
+                </p>
             </div>
         </div>
     </div>
