--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Aneesh Roy</title>
+    <title>Experience and Projects - Aneesh Roy</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -16,38 +16,86 @@
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
-                    <a href="projects.html">EXPERIENCE</a>
+                    <a href="projects.html">PROJECTS</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
             </div>
-
+            </div>
             <div class="projects-container">
+                <h2>Experience</h2>
                 <div class="project fade-in-right">
-                    <img src="images/project1-placeholder.jpg" alt="Project 1" class="project-image">
-                    <h2>Octaura - Software Engineer Intern</h2>
+                    <h3>Octaura – Software Engineering Intern</h3>
+                    <p>New York, NY (June 2023 – August 2023)</p>
                     <p>
                         Full-stack engineering work for financial tech startup Octaura; created an internal real-time metrics dashboard to gauge 
-platform health and determine client engagement/improvement areas.
+                        platform health and determine client engagement/improvement areas.<br>
+                        Connected PostgreSQL database to Java backend with Springboot; created API framework with DGS to connect to a 
+                        Javascript frontend and display live metrics; managed team and helped develop company CI/CD pipeline.
                     </p>
-                    <a href="#" class="project-link">View Project</a>
                 </div>
                 <div class="project fade-in-right">
-                    <img src="images/project1-placeholder.jpg" alt="Project 1" class="project-image">
-                    <h2>NoCap - Technical Lead</h2>
+                    <h3>Vice President of Student Affairs – Student Consultant</h3>
+                    <p>Austin, TX (November 2021 – Dec 2022)</p>
                     <p>
-                        A project to create a centralized platform for managing crypto asset security through personalized news update notifications and sentiment analysis. Developed database handling, notification systems, and API creation using REST, Vue.js, Flask, and Docker.
+                        Discussed campus strategy on topics pertaining to student health, success, and education.<br>
+                        Managed a student team and optimized solutions for campus-student connection initiatives; helped to overhaul campus 
+                        events social media for better engagement with student body.
                     </p>
-                    <a href="#" class="project-link">View Project</a>
                 </div>
                 <div class="project fade-in-right">
-                    <img src="images/project2-placeholder.jpg" alt="Project 2" class="project-image">
-                    <h2>University of Texas at Dallas - Research Intern</h2>
+                    <h3>Vogel Alcove – Business Management Intern</h3>
+                    <p>Dallas, TX (May 2019 – August 2019)</p>
                     <p>
-                        Conducted research on synthetic data generation using genetic algorithms. Published a research paper titled "Generating Synthetic Time Series Data using Java Programming".
+                        Used Visual Basic and Salesforce to automate data entry of grants and volunteering organizations for the charity; also spoke 
+                        at public outreach events and managed grants and donations for the facility.<br>
+                        Ran donation drives and events, including a city-wide corporate dodgeball tournament raising over $55,000 for use in 
+                        establishing new cafeteria facilities for the charity.
                     </p>
-                    <a href="#" class="project-link">View Project</a>
                 </div>
-                <!-- Add more projects as needed -->
+
+                <h2>Projects</h2>
+                <div class="project fade-in-right">
+                    <div class="gallery">
+                        <div class="gallery-images">
+                            <img src="images/project1-placeholder1.jpg" alt="NoCap Project 1">
+                            <img src="images/project1-placeholder2.jpg" alt="NoCap Project 2">
+                            <img src="images/project1-placeholder3.jpg" alt="NoCap Project 3">
+                        </div>
+                        <div class="gallery-controls">
+                            <button class="prev">&#10094;</button>
+                            <button class="next">&#10095;</button>
+                        </div>
+                    </div>
+                    <h3>NoCap – Cofounder/Technical Lead</h3>
+                    <p>Austin, TX (June 2022 – December 2022)</p>
+                    <p>
+                        A project to create a centralized, accessible platform notifying users of breaches or threats to their crypto assets so they can 
+                        manage their portfolio efficiently; received the StartUP grant from UT LaunchPad in Fall 2022 to pursue the venture.<br>
+                        Technical lead, including working on full-stack development for database handling, notification system, and API creation 
+                        using REST, Vue.js, Flask, Docker, etc.
+                    </p>
+                </div>
+                <div class="project fade-in-right">
+                    <div class="gallery">
+                        <div class="gallery-images">
+                            <img src="images/project2-placeholder1.jpg" alt="Research Project 1">
+                            <img src="images/project2-placeholder2.jpg" alt="Research Project 2">
+                            <img src="images/project2-placeholder3.jpg" alt="Research Project 3">
+                        </div>
+                        <div class="gallery-controls">
+                            <button class="prev">&#10094;</button>
+                            <button class="next">&#10095;</button>
+                        </div>
+                    </div>
+                    <h3>University of Texas at Dallas – Research Intern</h3>
+                    <p>Dallas, TX (June 2018 – September 2019)</p>
+                    <p>
+                        Shadowed Computer Science professor and graduate students in Genetic Programming/Data Synthesis, using Java and 
+                        MATLAB for synthetic data generation using a genetic algorithm.<br>
+                        Subsequently wrote and published a Research Paper - “Generating Synthetic Time Series Data using Java Programming” - in 
+                        Data Science Foundation Journal.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
