--- a/about.html
+++ b/about.html
@@ -12,52 +12,60 @@
         <div class="container">
             <div class="top-left">
                 <h1>ANEESH ROY</h1>
-                <p>Engineer & Developer</p>
+                <p>ENGINEER AND DEVELOPER</p>
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
-                    <a href="projects.html">PROJECTS</a>
+                    <a href="projects.html">PORTFOLIO</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
             </div>
             <div class="about-content">
+                <h2>ABOUT ME</h2>
+                <p class="editable-paragraph">I'm Aneesh, but all my friends call me Chiko. Growing up in Coppell, Texas, a suburb of Dallas, I've embraced the Southern hospitality I see all around me.<br><br>
+                With the multitude of things I am interested in, its hard to pinpoint what makes me who I am. I think the best description comes from my parents, who've molded me from the bottom up. 
+                My earliest memories have me responding to two different names; Aneesh for the academic demands, and Chiko for everything else. I didn’t come to this unusual realization that I lived 
+                with two personas until I was older, and began to see how my two names morphed into two very different sides of me. I always thought one side would win over the years, but I understand
+                 now that long ago they stopped fighting and started coexisting, an outcome I cherish every day.</p>
                 <img src="images/headshot.jpeg" alt="Aneesh Roy" class="profile-image">
-                <p class="editable-paragraph">
-                    My name is Aneesh Roy, but all of my friends call me Chiko. I recently graduated from UT Austin with a degree in Computational Engineering and a minor in Entrepreneurship.
-                     As a gen-Z future professional, I have had the privilege to begin programming in middle school, where I have focused on algorithmic data processing and machine learning.
-                     I am an aspiring Big Data professional so I can put my predictive skills to the test!
-                     I strive to be a leader in all of my workplace situations, where I can flex my problem-solving, public speaking, and project management skills.
-                    In my free time, I play a good amount of basketball and ultimate frisbee and love to talk about all things NBA.
-                     Also, any conversation about your favorite movies or directors might get dragged on.
-                      I am a musician and love to produce and play the drums, where I released an alt-rock album in high school.
+
+                <p class = "editable-paragraph"> I've engrossed myself in learning anything and everything with the hopes of eventually becoming a Jeopardy champion. In my free time, I play the drums and love to
+                    produce music. In high school, my band Flood the Walls released an album I linked below. I watch and play basketball, and love to rock climb and swim as well. I will go to every concert I am remotely
+                    interested in, and will basically try anything once. 
                 </p>
-                <h2>Education</h2>
-                <p class="editable-paragraph">
-                    <strong>The University of Texas at Austin</strong><br>
-                    Bachelor of Science, Computational Engineering<br>
-                    Minor: Entrepreneurship<br>
-                    Graduation: May 2024<br>
-                    GPA: 3.1<br>
-                    Relevant Coursework: Software Eng. & Design, Adv. Scientific Eng., Scientific Computation, Data Visualization
-                </p>
+                <h2>EDUCATION</h2>
+                <h3>The University of Texas at Austin</h3>
+                <p>Bachelor of Science, Computational Engineering</p>
+                <p>Minor: Entrepreneurship</p>
+                <p>2020-2024</p>
+                <p>GPA: 3.1</p>
+                <p>Organizations: Association of Computational Engineers, Harkey Entrepreneurship Institute, Alpha Kappa Psi, Absolute Texxas</p>
+                <p>Relevant Coursework: Software Eng. & Design, Adv. Scientific Eng., Scientific Computation, Data Visualization</p>
+                <br>
+
+                <h3>Coppell High School</h3>
+                <p>Coppell, TX, 2016-2020</p>
+                <p>GPA: Weighted: 5.42 | Unweighted: 4.0 | Top 7%</p>
+                <p>ACT: 35 | SAT Math 2: 800 | SAT Physics: 800 | SAT Biology: 770</p>
+                <p>UIL Computer Science Team Leader | International Baccalaureate Treasurer</p>
+                <p>Relevant Coursework: AP Computer Science (4), AP Physics 1 (5), AP AB Calculus (5), AP Biology (5), IB HL (Higher Level) Mathematics, IB HL Economics</p>
+
                 <h2>Skills</h2>
-                <p class="editable-paragraph">
-                    <strong>Computer Skills:</strong> Python, Java, C++, R, MATLAB, HTML, CSS, Flask, Springboot, Microsoft Office Suite
-                </p>
+                <p>Python, Java, C++, R, MATLAB, HTML, CSS, Flask, Springboot, Microsoft Office Suite</p>
+
                 <h2>Languages</h2>
-                <p class="editable-paragraph">
-                    Fluent in English, Intermediate in Spanish and Bangla
-                </p>
-                <h2>Work Eligibility</h2>
-                <p class="editable-paragraph">
-                    Eligible to work in the US
-                </p>
+                <p>Fluent in English, Intermediate in Spanish and Bangla</p>
+
+                <h2>Eligibility</h2>
+                <p>Eligible to work in the US</p>
+
+                <h2>My Music</h2>
+                <a href="https://soundcloud.com/floodthewallsband/sets/the-blueprint?si=44a822d60d1c4a69a2d987e081b72c46&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="soundcloud-button">Listen to my album on SoundCloud</a>
             </div>
         </div>
     </div>
     <footer>
-        <p>Edit this footer content later.</p>
+        <p>© Aneesh Roy, 2024. All rights reserved.</p>
     </footer>
-    <script src="js/script.js"></script>
 </body>
 </html>
