--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
-                    <a href="projects.html">PROJECTS</a>
+                    <a href="projects.html">PORTFOLIO</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <footer>
-        <p>Edit this footer content later.</p>
+        <p>© Aneesh Roy, 2024. All rights reserved.</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
