--- a/projects.html
+++ b/projects.html
@@ -12,96 +12,149 @@
         <div class="container">
             <div class="top-left">
                 <h1>ANEESH ROY</h1>
-                <p>Engineer & Developer</p>
+                <p>ENGINEER AND DEVELOPER</p>
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
-                    <a href="projects.html">PROJECTS</a>
+                    <a href="projects.html">PORTFOLIO</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
             </div>
-            </div>
-            <div class="projects-container">
-                <h2>Experience</h2>
-                <div class="project fade-in-right">
-                    <h3>Octaura – Software Engineering Intern</h3>
-                    <p>New York, NY (June 2023 – August 2023)</p>
-                    <p>
-                        Full-stack engineering work for financial tech startup Octaura; created an internal real-time metrics dashboard to gauge 
-                        platform health and determine client engagement/improvement areas.<br>
-                        Connected PostgreSQL database to Java backend with Springboot; created API framework with DGS to connect to a 
-                        Javascript frontend and display live metrics; managed team and helped develop company CI/CD pipeline.
-                    </p>
-                </div>
-                <div class="project fade-in-right">
-                    <h3>Vice President of Student Affairs – Student Consultant</h3>
-                    <p>Austin, TX (November 2021 – Dec 2022)</p>
-                    <p>
-                        Discussed campus strategy on topics pertaining to student health, success, and education.<br>
-                        Managed a student team and optimized solutions for campus-student connection initiatives; helped to overhaul campus 
-                        events social media for better engagement with student body.
-                    </p>
-                </div>
-                <div class="project fade-in-right">
-                    <h3>Vogel Alcove – Business Management Intern</h3>
-                    <p>Dallas, TX (May 2019 – August 2019)</p>
-                    <p>
-                        Used Visual Basic and Salesforce to automate data entry of grants and volunteering organizations for the charity; also spoke 
-                        at public outreach events and managed grants and donations for the facility.<br>
-                        Ran donation drives and events, including a city-wide corporate dodgeball tournament raising over $55,000 for use in 
-                        establishing new cafeteria facilities for the charity.
-                    </p>
-                </div>
+            <div class="projects-wrapper">
+                <div class="projects-container">
+                    <h2>EXPERIENCE</h2>
+                    <br>
+                    <div class="project fade-in-right">
+                        <h3>Octaura – Software Engineering Intern</h3>
+                        <p>New York, NY (June 2023 – August 2023)</p>
+                        <p>
+                            Full-stack engineering work for financial tech startup Octaura; created an internal real-time metrics dashboard to gauge 
+                            platform health and determine client engagement/improvement areas.<br>
+                            Connected PostgreSQL database to Java backend with Springboot; created API framework with DGS to connect to a 
+                            Javascript frontend and display live metrics; managed team and helped develop company CI/CD pipeline.
+                        </p>
+                    </div>
+                    <div class="project fade-in-right">
+                        <h3>Iota Capital Management LLC – Technical Analyst</h3>
+                        <p>Austin, TX (August 2022 – May 2023)</p>
+                        <p>
+                            Technical Investment Analyst for a student-led fund hosted by the Alpha Kappa Psi business fraternity.<br>
+                            Used Python & R for statistical analysis and modeling, created financial models using Excel and VB, 
+                            created quantitative algorithm using technical indicators for the Energy Sector.
+                        </p>
+                    </div>
+                    <div class="project fade-in-right">
+                        <h3>Technology Students Association – Student Coach</h3>
+                        <p>Dallas, TX (October 2022 – May 2024)</p>
+                        <p>
+                            Worked with the Barbara Bush Middle School to mentor/coach the student led team for the TSA competition.<br>
+                            Led curriculum in website design in HTML/CSS, web video game design in Unity, and coding challenges in Java, Python, and Scratch.
+                        </p>
+                    </div>
+                    <div class="project fade-in-right">
+                        <h3>Vice President of Student Affairs – Student Consultant</h3>
+                        <p>Austin, TX (November 2021 – Dec 2022)</p>
+                        <p>
+                            Discussed campus strategy on topics pertaining to student health, success, and education.<br>
+                            Managed a student team and optimized solutions for campus-student connection initiatives; helped to overhaul campus 
+                            events social media for better engagement with student body.
+                        </p>
+                    </div>
+                    <div class="project fade-in-right">
+                        <h3>University of Texas at Dallas – Research Intern</h3>
+                        <p>Dallas, TX (June 2018 – September 2019)</p>
+                        <p>
+                            Shadowed Computer Science professor and graduate students in Genetic Programming/Data Synthesis, using Java and 
+                            MATLAB for synthetic data generation using a genetic algorithm.<br>
+                            Subsequently wrote and published a Research Paper - “Generating Synthetic Time Series Data using Java Programming” - in 
+                            Data Science Foundation Journal.
+                        </p>
+                        <p><a href="https://drive.google.com/file/d/1jLM3DV68ikqrXmO61E_CYFXnTJWREna0/view?usp=sharing" target="_blank" class = "contact-button" >View the Paper</a></p>
+                        <br>
+                    </div>
+                    <div class="project fade-in-right">
+                        <h3>Vogel Alcove – Business Management Intern</h3>
+                        <p>Dallas, TX (May 2019 – August 2019)</p>
+                        <p>
+                            Used Visual Basic and Salesforce to automate data entry of grants and volunteering organizations for the charity; also spoke 
+                            at public outreach events and managed grants and donations for the facility.<br>
+                            Ran donation drives and events, including a city-wide corporate dodgeball tournament raising over $55,000 for use in 
+                            establishing new cafeteria facilities for the charity.
+                        </p>
+                    </div>
 
-                <h2>Projects</h2>
-                <div class="project fade-in-right">
-                    <div class="gallery">
-                        <div class="gallery-images">
-                            <img src="images/project1-placeholder1.jpg" alt="NoCap Project 1">
-                            <img src="images/project1-placeholder2.jpg" alt="NoCap Project 2">
-                            <img src="images/project1-placeholder3.jpg" alt="NoCap Project 3">
-                        </div>
-                        <div class="gallery-controls">
-                            <button class="prev">&#10094;</button>
-                            <button class="next">&#10095;</button>
-                        </div>
-                    </div>
-                    <h3>NoCap – Cofounder/Technical Lead</h3>
-                    <p>Austin, TX (June 2022 – December 2022)</p>
-                    <p>
-                        A project to create a centralized, accessible platform notifying users of breaches or threats to their crypto assets so they can 
-                        manage their portfolio efficiently; received the StartUP grant from UT LaunchPad in Fall 2022 to pursue the venture.<br>
-                        Technical lead, including working on full-stack development for database handling, notification system, and API creation 
-                        using REST, Vue.js, Flask, Docker, etc.
-                    </p>
-                </div>
-                <div class="project fade-in-right">
-                    <div class="gallery">
-                        <div class="gallery-images">
-                            <img src="images/project2-placeholder1.jpg" alt="Research Project 1">
-                            <img src="images/project2-placeholder2.jpg" alt="Research Project 2">
-                            <img src="images/project2-placeholder3.jpg" alt="Research Project 3">
-                        </div>
-                        <div class="gallery-controls">
-                            <button class="prev">&#10094;</button>
-                            <button class="next">&#10095;</button>
+                    <h2>PROJECTS</h2>
+                    <br>
+                    <div class="project fade-in-right">
+                        <h3>Sandia National Laboratories – Project Engineer/Safety Lead</h3>
+                        <p>Austin, TX (January 2024 – May 2024)</p>
+                        <p>
+                            Contracted by SNL in partnership with the Association of Computational Engineers to design, model,
+                            and simulate a hydraulic actuator under specific requirements for use in further engineering projects.<br>
+                            Modeled a dual antagonistic piston hydraulic actuator system using SOLIDWORKS, simulated fluid and stress conditions using MATLAB
+                            and ANSYS Fluent to ensure all requirements were met; controlled team workloads and safety procedures 
+                        </p>
+                        <div class="gallery">
+                            <img src="images/sandia1.png" alt="Sandia Project 1" class="project-image">
+                            <img src="images/sandia2.png" alt="Sandia Project 2" class="project-image">
+                            <img src="images/sandia3.png" alt="Sandia Project 3" class="project-image">
                         </div>
                     </div>
-                    <h3>University of Texas at Dallas – Research Intern</h3>
-                    <p>Dallas, TX (June 2018 – September 2019)</p>
-                    <p>
-                        Shadowed Computer Science professor and graduate students in Genetic Programming/Data Synthesis, using Java and 
-                        MATLAB for synthetic data generation using a genetic algorithm.<br>
-                        Subsequently wrote and published a Research Paper - “Generating Synthetic Time Series Data using Java Programming” - in 
-                        Data Science Foundation Journal.
-                    </p>
+                    <br>
+                    <div class="project fade-in-right">
+                        <h3>Dispoze – Cofounder</h3>
+                        <p>Austin, TX (May 2023 – Present)</p>
+                        <p>
+                            Startup venture to develop a supply chain based around repurposing lithium ion batteries for use by small electronics manufacturers.
+                            Included a collection, transportation, disassembly, and sale of repurposed lithium ion batteries.<br>
+                            Received over $5000 from various competitions to pursue this venture; responsible for operations, sales, and engineering/technology needs.
+                        </p>
+                        <br>
+                        <div class="gallery">
+                            <img src="images/dispoze3.png" alt="Dispoze Project 1" class="project-image">
+                            <img src="images/dispoze1.png" alt="Dispoze Project 2" class="project-image">
+                            <img src="images/dispoze2.png" alt="Dispoze Project 3" class="project-image">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="project fade-in-right">
+                        <h3>NoCap – Technical Lead</h3>
+                        <p>Austin, TX (June 2022 – December 2022)</p>
+                        <p>
+                            A project to create a centralized, accessible platform notifying users of breaches or threats to their crypto assets so they can 
+                            manage their portfolio efficiently; received the StartUP grant from UT LaunchPad in Fall 2022 to pursue the venture.<br>
+                            Technical lead, including working on full-stack development for database handling, notification system, and API creation 
+                            using REST, Vue.js, Flask, Docker, etc.
+                        </p>
+                        <br>
+                        <div class="gallery">
+                            <img src="images/nocap1.png" alt="NoCap Project 1" class="project-image">
+                            <img src="images/nocap2.png" alt="NoCap Project 2" class="project-image">
+                            <img src="images/nocap3.png" alt="NoCap Project 3" class="project-image">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="project fade-in-right">
+                        <h3>Falcon Aviation - Database Creator</h3>
+                        <p>Dallas, TX (June 2019 – December 2019)</p>
+                        <p>
+                            Contracted by an aviation company to create a multi-level excel database organizing airplane procedures and statistics into one playbook
+                            <br>
+                            Integrated Visual Basic and hyperlinking into a user friendly aviation manual used in pilot education.
+                        </p>
+                        <br>
+                        <div class="gallery">
+                            <img src="images/dataSynthesis1.png" alt="Research Project 1" class="project-image">
+                            <img src="images/dataSynthesis2.png" alt="Research Project 2" class="project-image">
+                            <img src="images/dataSynthesis3.png" alt="Research Project 3" class="project-image">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <footer>
-        <p>Edit this footer content later.</p>
+        <p>© Aneesh Roy, 2024. All rights reserved.</p>
     </footer>
-    <script src="js/script.js"></script>
 </body>
 </html>
