--- a/contact.html
+++ b/contact.html
@@ -12,26 +12,24 @@
         <div class="container">
             <div class="top-left">
                 <h1>ANEESH ROY</h1>
-                <p>Engineer & Developer</p>
+                <p>ENGINEER AND DEVELOPER</p>
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
-                    <a href="projects.html">PROJECTS</a>
+                    <a href="projects.html">PORTFOLIO</a>
                     <a href="contact.html">CONTACT</a>
                 </div>
             </div>
             <div class="contact-content">
                 <h2>Contact Me</h2>
-                <p>You can reach me via email or through my social media profiles.</p>
-                <p>Email: <a href="mailto:Aneesh.roy@utexas.edu">Aneesh.roy@utexas.edu</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/aneesh-roy" target="_blank">linkedin.com/in/aneesh-roy</a></p>
-                <p>GitHub: <a href="https://github.com/aneeshroy" target="_blank">github.com/aneeshroy</a></p>
+                <a href="mailto:Aneesh.roy@utexas.edu" class="contact-button">Email Me</a>
+                <a href="https://linkedin.com/in/aneesh-roy" target="_blank" class="contact-button">LinkedIn</a>
+                <a href="https://github.com/aneeshroy" target="_blank" class="contact-button">GitHub</a>
             </div>
         </div>
     </div>
     <footer>
-        <p>Edit this footer content later.</p>
+        <p>© Aneesh Roy, 2024. All rights reserved.</p>
     </footer>
-    <script src="js/script.js"></script>
 </body>
 </html>
