--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="top-left">
                 <h1>ANEESH ROY</h1>
-                <p>ENGINEER AND DEVELOPER</p>
+                <p>ENGINEER & DEVELOPER</p>
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
