--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="top-left">
                 <h1>ANEESH ROY</h1>
-                <p>ENGINEER AND DEVELOPER</p>
+                <p>ENGINEER & DEVELOPER</p>
                 <div class="page-links">
                     <a href="index.html">HOME</a>
                     <a href="about.html">INFO</a>
@@ -70,7 +70,6 @@
                             Data Science Foundation Journal.
                         </p>
                         <p><a href="https://drive.google.com/file/d/1jLM3DV68ikqrXmO61E_CYFXnTJWREna0/view?usp=sharing" target="_blank" class = "contact-button" >View the Paper</a></p>
-                        <br>
                     </div>
                     <div class="project fade-in-right">
                         <h3>Vogel Alcove – Business Management Intern</h3>
@@ -144,9 +143,9 @@
                         </p>
                         <br>
                         <div class="gallery">
-                            <img src="images/dataSynthesis1.png" alt="Research Project 1" class="project-image">
-                            <img src="images/dataSynthesis2.png" alt="Research Project 2" class="project-image">
-                            <img src="images/dataSynthesis3.png" alt="Research Project 3" class="project-image">
+                            <img src="images/falcon1.png" alt="Falcon Project 1" class="project-image">
+                            <img src="images/falcon2.png" alt="Falcon Project 2" class="project-image">
+                            <img src="images/falcon3.png" alt="Falcon Project 3" class="project-image">
                         </div>
                     </div>
                 </div>
